# LedController

./: Cargo.toml  README.md  config.toml
resources/: minileds.service  rpi4-leds.service
src/: animation.rs  app.rs  args.rs  chase.rs  config.rs  main.rs  off.rs  rainbow.rs  static_rainbow.rs  utils.rs
src/animations/: chase.rs  mod.rs  off.rs  rainbow.rs  static_rainbow.rs
