[package]
name = "leds"
description = "A LED controller for ws281x LEDs. The controller support multiple animations and can be controlled via MQTT."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.21"
colog = "1.3.0"
log = "0.4.22"
rand = "0.8.5"
rs_ws281x = "0.5.1"
rumqttc = "0.23.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

[package.metadata.bundle]
name = "leds"
identifier = "xyz.minigrim0.leds"
category = "public.app-category.utilities"
short_description = "A LED controller for ws281x LEDs."
long_description = """
A LED controller for ws281x LEDs.
The controller support multiple animations and can be controlled via MQTT.
"""
