[package]
name = "minileds"
description = "A LED controller for ws281x LEDs. The controller support multiple animations and can be controlled via MQTT."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colog = "1.3.0"
log = "0.4.22"
rand = "0.8.5"
rs_ws281x = "0.5.1"
rumqttc = "0.23.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

[package.metadata.packager]
product_name = "MiniLEDs"
version = "0.1.0"
identifier = "xyz.minigrim0.leds"
binaries = [{path = "minileds", main = true}]
out_dir = "target/bundle"
category = "public.app-category.utilities"
homepage = "https://github.com/minigrim0/rpi4-ledcontroller"
authors = ["minigrim0"]
resources = [
    { src = "resources/minileds.service", target = "/etc/systemd/system/minileds.service" },
    { src = "config.toml", target = "/etc/minileds.conf" },
    { src = "resources/icon.png", target = "/usr/share/pixmaps/minileds.png" }
]
icons = ["resources/icon.png"]
description = "A LED controller for ws281x LEDs."
long_description = """
A LED controller for ws281x LEDs.
The controller support multiple animations and can be controlled via MQTT.
"""
